CREATE TABLE IF NOT EXISTS chunks (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    size INTEGER NOT NULL,
    file_id INTEGER NOT NULL,
    FOREIGN KEY (file_id) REFERENCES files(id)
);
