CREATE TABLE IF NOT EXISTS chunk_hashes (
    id INTEGER PRIMARY KEY AUTOINCREMENT,
    hash TEXT NOT NULL UNIQUE
);
